# pkg/api/v1/controllers/latex-gen-q-paper-sets.go
@@ -1,6 +1,8 @@
 package controllers
 
 import (
+	"fmt"
+	"log"
 	"net/http"
 
 	"github.com/Aadithya-V/qp-gen/pkg/api/v1/models"
@@ -60,4 +62,59 @@ func GenerateQpaperSetsFromDB(c *gin.Context) {
 	}
 
 	c.JSON(200, "")
+}
+
+// @Summary	Upload Question Bank in CSV format
+// @Schemes
+// @Description	Upload Question Bank in CSV format
+// @Tags		Upload
+// @Accept mpfd
+// @Param academic_year path string true "academic year"
+// @Param subject_code path string true "subject code"
+// @Param file formData file true "File to upload"
+// @Produce		json
+//
+// @Success		200
+// @Security		BearerAuth
+// @Router			/api/v1/upload/{academic_year}/{subject_code} [post]
+func UploadCSV(c *gin.Context) {
+
+	subCode := c.Param("subject_code")
+	year := c.Param("academic_year")
+
+	if len(subCode) == 0 || len(year) == 0 {
+		err := fmt.Errorf("required path params subject_code and academic_year")
+		log.Println(err.Error())
+		c.JSON(http.StatusBadRequest, err.Error())
+		c.Abort()
+		return
+	}
+
+	// single file
+	file, err := c.FormFile("file")
+	if err != nil {
+		log.Println(err.Error())
+		c.JSON(500, err.Error())
+		c.Abort()
+		return
+	}
+
+	if file == nil {
+		log.Println("no file uploaded")
+		c.JSON(http.StatusBadRequest, "required file upload")
+		c.Abort()
+		return
+	}
+
+	log.Println(file.Filename)
+
+	err = services.ParseAndSaveQuestionsFromCSV(c, file, subCode, year)
+	if err != nil {
+		log.Println(err.Error())
+		c.JSON(500, err.Error())
+		c.Abort()
+		return
+	}
+
+	c.JSON(200, "file uploaded")
 }
